--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <meta http-equiv="refresh" content="0; url=https://tanjiansari.github.io/Food-Web/index.html"> 
+    <meta http-equiv="refresh" content="0; url=https://tanjiansari.github.io/Food-Web/"> 
 </head>
 <body>
     
